# esp32-expressive-arm

./: .gitignore  CLAUDE.md  COMPREHENSIVE_PORTING_GUIDE.md  GEMINI_MEETUP_PRESENTATION.md  README.md  RESTART_CONTEXT.md  requirements.txt  setup.sh  smoketest.py  test.py  wipe.sh
ai/: AGENT_INSTRUCTIONS.md  README.md  example_direct_api.py  test_gemini_generator.py
assets/: IMAGE_PROMPTS.md
chicken/: 00_red_button.py  README.md  SEMANTIC_CALIBRATION.md  WORKFLOW_DESIGNER.md  __calibrator.py  __calibrator_simple.py  calibration_limits.json  calibrator_semantic.py  calibrator_web.py  chicken.py  chicken_simple.py  correct_sequence.yaml  main.py  micropython_runner.py  sequence.yaml  servo_config.json  servo_utils.py  test_calibration.py  workflow_designer.py  workflow_designer_simple.py
demos/: 01_test_servos.py  02_arm_circles.py  03_base_rotation.py  04_gripper_moves.py  05_wave_motion.py  06_generated.py  07_generated.py  08_generated.py  09_generated.py  10_generated.py  11_generated.py  12_generated.py  13_generated.py  14_generated.py  15_generated.py  16_generated.py  17_generated.py  18_generated.py  19_generated.py  20_generated.py  21_generated.py  22_generated.py  23_generated.py  24_generated.py  25_generated.py  26_generated.py  27_generated.py  28_generated.py  29_generated.py  30_generated.py  31_generated.py  32_generated.py  33_generated.py  34_generated.py  35_generated.py  36_generated.py  (+21 more)
robot-arm-rust/: Cargo.toml  README.md  RUST_PORT_CONTEXT.md  generated_script.py  setup.sh
robot-arm-rust/.cargo/: config.toml
robot-arm-rust/src/: main.rs
(+14 files in other folders)
