[package]
name = "robot-arm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
esp-hal = { version = "0.22", features = ["esp32c3"] }
esp-backtrace = { version = "0.14", features = ["esp32c3", "panic-handler", "println"] }
esp-println = { version = "0.12", features = ["esp32c3", "log"] }
log = "0.4"
libm = "0.2"

[profile.release]
opt-level = "s"
lto = "fat"

[profile.dev]
opt-level = 1
