[package]
name = "abel"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
cpal = "0.15.3"
hound = "3.5.1"
base64 = "0.22.1"

[profile.release]
opt-level = "s"
lto = "fat"

[profile.dev]
opt-level = 1
